--- a/README.rdoc
+++ b/README.rdoc
@@ -18,7 +18,7 @@ Examples (in a rails app):
   RowsLogger plugin enables mysql
   >> exit
   ~/rails_app/app/views$ s r 'some ruby'
-  s r' was too ambiguous. Try:
+  's r' was too ambiguous. Try:
     's ru' for 'script/runner'
     's re' for 'script/remote'
   ~/rails_app/app/views$ s ru 'some ruby'
@@ -39,6 +39,8 @@ executables in a different dir (I would save this one as 'c'):
 == FEATURES/PROBLEMS:
 
 * may not yet properly handle quoted arguments
+
+Email me at: tcrawley@gmail.com if you find any problems.
 
 == INSTALL:
 
