--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,12 @@
+== 0.0.3 2009-03-11
+
+* fixed issue with exception when command not found
+
+== 0.0.2 2009-03-11
+
+* added readme
+* updated gemspec with contents from readme
+
 == 0.0.1 2009-03-10
 
 * 1 major enhancement:
